# TilerVerify

./: .gitignore  README.md  collect_result_lidar.py  convert_model.sh  dependency.jl  detect.sh  gen_target_boxes_lidar.py  generate_data.py  generate_data_lidar.py  get_adv_inputs.jl  get_adv_lidar.sh  lidar_bnn.sh  lidar_bnn_adaptive.sh  lidar_milp.sh  lidar_milp_adaptive.sh  lidar_stats.sh  main.py  parallel_verify.py  parallel_verify_adaptive.py  parallel_verify_lidar.py  parallel_verify_lidar_adaptive.py  record.txt  road_stats.sh  run_exp.sh  run_exp_lidar.sh  show_adv_inputs.py  test.py  test.sh  test_helper.jl  test_lidar.sh  thread_collect.jl  thread_collect_adaptive.jl  thread_collect_lidar.jl  thread_collect_lidar_adaptive.jl  train_and_convert_model.sh  verify.jl  verify_thread.jl  verify_thread_lidar.jl
MIPVerify/src/: MIPVerify.jl  batch_processing_helpers.jl  models.jl
MIPVerify/src/net_components/: core_ops.jl
MIPVerify/src/net_components/layers/: conv2d.jl  flatten.jl  linear.jl  masked_relu.jl  pool.jl  relu.jl
MIPVerify/src/utils/: import_datasets.jl  import_example_nets.jl  import_weights.jl
analysis/: heatmap.py  heatmap_lidar.py  plot_result.py  statistics.py  stats_lidar.py  stats_road.py  total_time.py
eevbnn/: __init__.py  __main__.py  attack.py  attack_impl.py  eval_bin.py  mp_verifier_attack.py  net_bin.py  sat_pysat.py  sat_pysat_card.pyx  satenv.py  train_bin.py  utils.py
eevbnn/minisatcs/: CMakeLists.txt  minisatcs_wrapper.h
eevbnn/minisatcs/minisat/core/: Dimacs.h  Main.cc  Recorder.h  Solver.cc  Solver.h  SolverTypes.h
eevbnn/minisatcs/minisat/mtl/: Alloc.h  Vec.h
eevbnn/minisatcs/minisat/simp/: Main.cc  SimpSolver.cc  SimpSolver.h
eevbnn/minisatcs/minisat/utils/: Options.cc  Random.h  System.cc  System.h
eevbnn/minisatcs/tests/inputs/: easy.txt
eevbnn/minisatcs/tests/inputs/SAT/ineq/: deadvar0.cnf  deadvar1.cnf  gen_rand.py  rand0.cnf  rand1.cnf  rand2.cnf  simple0.cnf  simple1.cnf  simple2.cnf  simple3.cnf  simplify.cnf
eevbnn/minisatcs/tests/inputs/UNSAT/dubois/: dubois100.cnf
eevbnn/minisatcs/tests/inputs/UNSAT/ineq/: simple0.cnf  simple1.cnf
image_generator/: graphics.py
input_detector/: detect.py
lidar_generator/: simulation.py
trainer/: convert_for_milp.py  dataset.py  error_estimate.py  model.py  test_error.py  train.py  utils.py
